--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@capacitor/android": "^1.2.1",
     "@capacitor/core": "1.2.1",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/http": "^5.15.1",
     "@ionic-native/native-storage": "^5.15.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "cordova-plugin-advanced-http": "^2.2.0",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-nativestorage": "^2.3.2",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
@@ -75,7 +78,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": []
   }
